# FastAPI_learn

./: .gitignore  alembic.ini  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_08_02_1823-9bae570c8e37_create_profile_table.py  2024_08_03_1726-683393f51f15_create_orders_table.py  2024_08_03_1757-309592241f71_create_order_product_association_table.py  2024_08_03_1937-6875e2a817f2_add_count_column_to_order_product_.py  2024_08_03_2023-6069a0786cb6_add_unit_price_column_to_order_product_.py  407ffc8a82ee_create_users_table.py  8d2df262703b_create_products_table.py  f48cde9ff894_create_posts_table.py
app_v1/: __init__.py
app_v1/demo_auth/: demo_jwt_auth.py  views.py
app_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
