[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Kristina Shishkina <klikklok2017@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = {extras = ["standart"], version = "^0.30.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
aiosqlite = "^0.20.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
